<?xml version="1.0"?>
<package format="3">
  <name>objects_filter</name>
  <version>0.1.0</version>
  <description>Filter DetectedObjects by class label and position</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_perception_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
